# cherno-opengl

./: .gitignore  CMakeLists.txt  README.md
include/GL/: glew.h
include/glad/: glad.h
lib/: glfw3.lib
res/shaders/: Basic.shader
src/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexBuffer.h  VertexBufferLayout.h  glad.c  main.cpp
src/engine/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
src/error/: error.h
src/utils/: RGBA.cpp  RGBA.h
